# Trading_HydraV2-

./: .env.example  .gitignore  ALPHA_MEMO.md  AUDIT_2026-02-11.md  CHANGELOG.md  CONFIG_PRECEDENCE.md  OPERATOR_BRIEF.md  PROFITABILITY_ANALYSIS.md  README.md  SYSTEM_GUIDE.md  TRADING_HYDRA_FM.md  TRADING_HYDRA_MODULE_REFERENCE.md  TRADING_HYDRA_SOP.md  TRADING_HYDRA_TROUBLESHOOTING_FM.md  analyze_errors.py  analyze_logs.py  analyze_state.py  analyze_week.py  audit_output.txt  find_unicode.py  main.py  pyproject.toml  replit.md  requirements.txt  run.bat  run.sh  run_bot.sh  setup.bat  setup.sh  start_bot.bat  watchdog.py
cache/: earnings_cache.json
config/: best_bear_call.yaml  best_bull_put.yaml  best_iron_condor.yaml  best_long_call.yaml  bots.yaml  fullbot.yaml  killswitch.yaml  optimized_settings.yaml  regimes.yaml  sensors.yaml  settings.yaml.backup.20260128_003209  sizing.yaml  ticker_universe.yaml  universe_profiles.yaml  watchlists.yaml
data/: optimizer_cache_30d.json  optimizer_cache_60d.json
docs/: EXITBOT_STRATEGY_GUIDE.md  GO_NO_GO_CHECKLIST.md  HAILMARY_STRATEGY_GUIDE.md  LOCAL_SWEEP_GUIDE.md  SWEEP_OPTIMIZER_GUIDE.md  TRADING_HYDRA_CODE_DIAGNOSTICS.md  TRADING_HYDRA_FM.md  TRADING_HYDRA_SOP.md  TRADING_HYDRA_TROUBLESHOOTING_FM.md  deployment-systemd.md
logs/: effective_config.json
results/: all_bots_backtest.json  allocation_split_5k.json  backtest_hailmary_1000d.json  capital_sweep_dynamic.json  dynamic_optimizer_results.json  exitbot_v2_5k_results.json  stoploss_hunt_backtest.json  sweep_all_1k.json  sweep_bouncebot.json  sweep_crypto.json  (+6 more)
(+312 files in other folders)
